fix: Image size correction on firefox

--- a/src/web/static/css/wallpaper.css
+++ b/src/web/static/css/wallpaper.css
@@ -163,6 +163,6 @@ img {
 
 @media (min-width: 1400px) {
     .wallpaper-img {
-        max-width: 30%;
+        min-width: 20%;
     }
 }
